--- a/environment.yml
+++ b/environment.yml
@@ -4,6 +4,7 @@ channels:
   - defaults
 dependencies:
   - python=3.10
+  - black
   - contextily
   - GDAL
   - geopandas
@@ -14,7 +15,8 @@ dependencies:
   - netCDF4
   - numpy
   - pandas
-  - pandera
+  - pandera-geopandas
+  - pandera-io
   - pydantic==1.8.2
   - rasterio
   - rasterstats
@@ -23,7 +25,6 @@ dependencies:
   - xarray
   - pip
   - pip:
-    - black
     - imod
     - ipympl
     - isort
