--- a/environment.yml
+++ b/environment.yml
@@ -14,7 +14,8 @@ dependencies:
   - momepy
   - netCDF4
   - numpy
-  - pandas
+  - pandas==1.5.2
+  - pandera==0.13.4
   - pandera-geopandas
   - pandera-io
   - pydantic==1.8.2
@@ -23,6 +24,7 @@ dependencies:
   - scipy
   - shapely==1.8.5
   - xarray
+  - xugrid
   - pip
   - pip:
     - imod
