--- a/environment_sas.yml
+++ b/environment_sas.yml
@@ -1,40 +1,307 @@
-name: inundation_toolbox_sas
+name: P1414_ROI_SAS
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.10
-  - black
-  - contextily
-  - GDAL
-  - geopandas
-  - jupyter
-  - lxml
-  - matplotlib
-  - momepy
-  - netCDF4
-  - numpy
-  - pandas==1.5.2
-  - pandera==0.13.4
-  - pandera-geopandas
-  - pandera-io
-  - pydantic==1.8.2
-  - rasterio
-  - rasterstats
-  - scipy
-  - shapely==1.8.5
-  - xarray
-  - xugrid
-  - ipyleaflet
-  - pip
+  - affine=2.4.0
+  - anyio=3.6.2
+  - argon2-cffi=21.3.0
+  - argon2-cffi-bindings=21.2.0
+  - asttokens=2.2.1
+  - attrs=22.2.0
+  - backcall=0.2.0
+  - backports=1.0
+  - backports.functools_lru_cache=1.6.4
+  - beautifulsoup4=4.12.1
+  - bleach=6.0.0
+  - blosc=1.21.3
+  - boost-cpp=1.78.0
+  - branca=0.6.0
+  - brotli=1.0.9
+  - brotli-bin=1.0.9
+  - brotlipy=0.7.0
+  - bzip2=1.0.8
+  - ca-certificates=2022.12.7
+  - cairo=1.16.0
+  - certifi=2022.12.7
+  - cffi=1.15.1
+  - cfitsio=4.2.0
+  - cftime=1.6.2
+  - charset-normalizer=3.1.0
+  - click=8.1.3
+  - click-plugins=1.1.1
+  - cligj=0.7.2
+  - colorama=0.4.6
+  - comm=0.1.3
+  - contextily=1.3.0
+  - contourpy=1.0.7
+  - cryptography=40.0.1
+  - curl=7.88.1
+  - cycler=0.11.0
+  - debugpy=1.6.7
+  - decorator=5.1.1
+  - defusedxml=0.7.1
+  - entrypoints=0.4
+  - executing=1.2.0
+  - expat=2.5.0
+  - fiona=1.8.22
+  - flit-core=3.8.0
+  - folium=0.14.0
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=3.000
+  - font-ttf-source-code-pro=2.038
+  - font-ttf-ubuntu=0.83
+  - fontconfig=2.14.2
+  - fonts-conda-ecosystem=1
+  - fonts-conda-forge=1
+  - fonttools=4.39.3
+  - freetype=2.12.1
+  - freexl=1.0.6
+  - gdal=3.6.3
+  - geographiclib=1.52
+  - geopandas=0.12.2
+  - geopandas-base=0.12.2
+  - geopy=2.3.0
+  - geos=3.11.1
+  - geotiff=1.7.1
+  - gettext=0.21.1
+  - glib=2.74.1
+  - glib-tools=2.74.1
+  - gst-plugins-base=1.22.0
+  - gstreamer=1.22.0
+  - hdf4=4.2.15
+  - hdf5=1.12.2
+  - icu=70.1
+  - idna=3.4
+  - importlib-metadata=6.1.0
+  - importlib_metadata=6.1.0
+  - importlib_resources=5.12.0
+  - intel-openmp=2023.0.0
+  - ipykernel=6.22.0
+  - ipyleaflet=0.17.2
+  - ipython=8.12.0
+  - ipython_genutils=0.2.0
+  - ipywidgets=8.0.6
+  - jedi=0.18.2
+  - jinja2=3.1.2
+  - joblib=1.2.0
+  - jsonschema=4.17.3
+  - jupyter=1.0.0
+  - jupyter_console=6.6.3
+  - jupyter_core=5.3.0
+  - jupyter_events=0.6.3
+  - jupyter_server=2.5.0
+  - jupyter_server_terminals=0.4.4
+  - jupyterlab_pygments=0.2.2
+  - jupyterlab_widgets=3.0.7
+  - kealib=1.5.0
+  - kiwisolver=1.4.4
+  - krb5=1.20.1
+  - lcms2=2.15
+  - lerc=4.0.0
+  - libaec=1.0.6
+  - libblas=3.9.0
+  - libbrotlicommon=1.0.9
+  - libbrotlidec=1.0.9
+  - libbrotlienc=1.0.9
+  - libcblas=3.9.0
+  - libclang=15.0.7
+  - libclang13=15.0.7
+  - libcurl=7.88.1
+  - libdeflate=1.17
+  - libexpat=2.5.0
+  - libffi=3.4.2
+  - libgdal=3.6.3
+  - libglib=2.74.1
+  - libhwloc=2.9.0
+  - libiconv=1.17
+  - libjpeg-turbo=2.1.5.1
+  - libkml=1.3.0
+  - liblapack=3.9.0
+  - libnetcdf=4.9.1
+  - libogg=1.3.4
+  - libpng=1.6.39
+  - libpq=15.2
+  - libpysal=4.7.0
+  - librttopo=1.1.0
+  - libsodium=1.0.18
+  - libspatialindex=1.9.3
+  - libspatialite=5.0.1
+  - libsqlite=3.40.0
+  - libssh2=1.10.0
+  - libtiff=4.5.0
+  - libvorbis=1.3.7
+  - libwebp-base=1.3.0
+  - libxcb=1.13
+  - libxml2=2.10.3
+  - libxslt=1.1.37
+  - libzip=1.9.2
+  - libzlib=1.2.13
+  - lxml=4.9.2
+  - lz4-c=1.9.4
+  - m2w64-gcc-libgfortran=5.3.0
+  - m2w64-gcc-libs=5.3.0
+  - m2w64-gcc-libs-core=5.3.0
+  - m2w64-gmp=6.1.0
+  - m2w64-libwinpthread-git=5.0.0.4634.697f757
+  - mapclassify=2.5.0
+  - markupsafe=2.1.2
+  - matplotlib=3.7.1
+  - matplotlib-base=3.7.1
+  - matplotlib-inline=0.1.6
+  - mercantile=1.2.1
+  - mistune=2.0.5
+  - mkl=2022.1.0
+  - momepy=0.5.4
+  - msys2-conda-epoch=20160418
+  - multimethod=1.9.1
+  - munch=2.5.0
+  - munkres=1.1.4
+  - mypy_extensions=1.0.0
+  - nbclassic=0.5.5
+  - nbclient=0.7.3
+  - nbconvert=7.3.0
+  - nbconvert-core=7.3.0
+  - nbconvert-pandoc=7.3.0
+  - nbformat=5.8.0
+  - nest-asyncio=1.5.6
+  - netcdf4=1.6.3
+  - networkx=3.1
+  - notebook=6.5.3
+  - notebook-shim=0.2.2
+  - openjpeg=2.5.0
+  - openssl=3.1.0
+  - packaging=23.0
+  - pandas=1.5.3
+  - pandera=0.14.5
+  - pandera-base=0.14.5
+  - pandoc=2.19.2
+  - pandocfilters=1.5.0
+  - parso=0.8.3
+  - pcre2=10.40
+  - pickleshare=0.7.5
+  - pillow=9.5.0
+  - pip=23.0.1
+  - pixman=0.40.0
+  - pkgutil-resolve-name=1.3.10
+  - platformdirs=3.2.0
+  - ply=3.11
+  - pooch=1.7.0
+  - poppler=23.03.0
+  - poppler-data=0.4.12
+  - postgresql=15.2
+  - proj=9.1.1
+  - prometheus_client=0.16.0
+  - prompt-toolkit=3.0.38
+  - prompt_toolkit=3.0.38
+  - psutil=5.9.4
+  - pthread-stubs=0.4
+  - pthreads-win32=2.9.1
+  - pure_eval=0.2.2
+  - pycparser=2.21
+  - pydantic=1.8.2
+  - pygeos=0.14
+  - pygments=2.14.0
+  - pyopenssl=23.1.1
+  - pyparsing=3.0.9
+  - pyproj=3.5.0
+  - pyqt=5.15.7
+  - pyqt5-sip=12.11.0
+  - pyrsistent=0.19.3
+  - pysocks=1.7.1
+  - python=3.10.10
+  - python-dateutil=2.8.2
+  - python-fastjsonschema=2.16.3
+  - python-json-logger=2.0.7
+  - python_abi=3.10
+  - pytz=2023.3
+  - pywin32=304
+  - pywinpty=2.0.10
+  - pyyaml=6.0
+  - pyzmq=25.0.2
+  - qt-main=5.15.8
+  - qtconsole=5.4.2
+  - qtconsole-base=5.4.2
+  - qtpy=2.3.1
+  - rasterio=1.3.6
+  - rasterstats=0.18.0
+  - requests=2.28.2
+  - rfc3339-validator=0.1.4
+  - rfc3986-validator=0.1.1
+  - rtree=1.0.1
+  - scikit-learn=1.2.2
+  - scipy=1.10.1
+  - send2trash=1.8.0
+  - setuptools=67.6.1
+  - shapely=1.8.5
+  - simplejson=3.18.4
+  - sip=6.7.7
+  - six=1.16.0
+  - snappy=1.1.10
+  - sniffio=1.3.0
+  - snuggs=1.4.7
+  - soupsieve=2.3.2.post1
+  - sqlite=3.40.0
+  - stack_data=0.6.2
+  - tbb=2021.8.0
+  - terminado=0.17.0
+  - threadpoolctl=3.1.0
+  - tiledb=2.13.2
+  - tinycss2=1.2.1
+  - tk=8.6.12
+  - toml=0.10.2
+  - tqdm=4.65.0
+  - traitlets=5.9.0
+  - traittypes=0.2.1
+  - typing-extensions=4.5.0
+  - typing_extensions=4.5.0
+  - typing_inspect=0.8.0
+  - tzdata=2023c
+  - ucrt=10.0.22621.0
+  - unicodedata2=15.0.0
+  - urllib3=1.26.15
+  - vc=14.3
+  - vs2015_runtime=14.34.31931
+  - wcwidth=0.2.6
+  - webencodings=0.5.1
+  - websocket-client=1.5.1
+  - wheel=0.40.0
+  - widgetsnbextension=4.0.7
+  - win_inet_pton=1.1.0
+  - winpty=0.4.3
+  - wrapt=1.15.0
+  - xarray=2023.3.0
+  - xerces-c=3.2.4
+  - xorg-libxau=1.0.9
+  - xorg-libxdmcp=1.1.3
+  - xyzservices=2023.2.0
+  - xz=5.2.6
+  - yaml=0.2.5
+  - zeromq=4.3.4
+  - zipp=3.15.0
+  - zlib=1.2.13
+  - zstd=1.5.2
   - pip:
-    - imod
-    - ipympl
-    - isort
-    - matplotlib_scalebar
-    - meshkernel>=2.0
-    - tqdm
-    - ugrid
-    - jupyter_client==7.3.2
+    - black==23.3.0
+    - cloudpickle==2.2.1
+    - dask==2023.3.2
+    - fsspec==2023.3.0
+    - imod==0.12.0
+    - ipympl==0.9.3
+    - isort==5.12.0
+    - jupyter-client==7.3.2
+    - llvmlite==0.39.1
+    - locket==1.0.0
+    - matplotlib-scalebar==0.8.1
+    - meshkernel==2.0.2
+    - numba==0.56.4
+    - numba-celltree==0.1.6
+    - numpy==1.23.5
+    - partd==1.3.0
+    - pathspec==0.11.1
+    - tomli==2.0.1
+    - tomli-w==1.0.0
+    - toolz==0.12.0
     - tornado==6.1
-  
+    - ugrid==0.13.0
+    - xugrid==0.3.0
