--- a/environment_sas.yml
+++ b/environment_sas.yml
@@ -1,4 +1,4 @@
-name: P1414_ROI_SAS
+name: roi_sas
 channels:
   - conda-forge
   - defaults
@@ -7,6 +7,7 @@ dependencies:
   - anyio=3.6.2
   - argon2-cffi=21.3.0
   - argon2-cffi-bindings=21.2.0
+  - arrow=1.3.0
   - asttokens=2.2.1
   - attrs=22.2.0
   - backcall=0.2.0
@@ -21,9 +22,11 @@ dependencies:
   - brotli-bin=1.0.9
   - brotlipy=0.7.0
   - bzip2=1.0.8
-  - ca-certificates=2022.12.7
+  - ca-certificates=2024.9.24
+  - cached-property=1.5.2
+  - cached_property=1.5.2
   - cairo=1.16.0
-  - certifi=2022.12.7
+  - certifi=2024.8.30
   - cffi=1.15.1
   - cfitsio=4.2.0
   - cftime=1.6.2
@@ -42,6 +45,7 @@ dependencies:
   - decorator=5.1.1
   - defusedxml=0.7.1
   - entrypoints=0.4
+  - et_xmlfile=1.1.0
   - executing=1.2.0
   - expat=2.5.0
   - fiona=1.8.22
@@ -55,6 +59,7 @@ dependencies:
   - fonts-conda-ecosystem=1
   - fonts-conda-forge=1
   - fonttools=4.39.3
+  - fqdn=1.5.1
   - freetype=2.12.1
   - freexl=1.0.6
   - gdal=3.6.3
@@ -82,10 +87,13 @@ dependencies:
   - ipython=8.12.0
   - ipython_genutils=0.2.0
   - ipywidgets=8.0.6
+  - isoduration=20.11.0
   - jedi=0.18.2
   - jinja2=3.1.2
   - joblib=1.2.0
+  - jsonpointer=3.0.0
   - jsonschema=4.17.3
+  - jsonschema-with-format-nongpl=4.17.3
   - jupyter=1.0.0
   - jupyter_console=6.6.3
   - jupyter_core=5.3.0
@@ -170,6 +178,7 @@ dependencies:
   - notebook=6.5.3
   - notebook-shim=0.2.2
   - openjpeg=2.5.0
+  - openpyxl=3.1.5
   - openssl=3.1.0
   - packaging=23.0
   - pandas=1.5.3
@@ -214,10 +223,10 @@ dependencies:
   - python-fastjsonschema=2.16.3
   - python-json-logger=2.0.7
   - python_abi=3.10
-  - pytz=2023.3
+  - pytz=2023.3.post1
   - pywin32=304
   - pywinpty=2.0.10
-  - pyyaml=6.0
+  - pyyaml=6.0.1
   - pyzmq=25.0.2
   - qt-main=5.15.8
   - qtconsole=5.4.2
@@ -253,16 +262,21 @@ dependencies:
   - tqdm=4.65.0
   - traitlets=5.9.0
   - traittypes=0.2.1
+  - types-python-dateutil=2.9.0.20240316
   - typing-extensions=4.5.0
   - typing_extensions=4.5.0
   - typing_inspect=0.8.0
   - tzdata=2023c
   - ucrt=10.0.22621.0
   - unicodedata2=15.0.0
+  - uri-template=1.3.0
+  - uriparser=0.9.8
   - urllib3=1.26.15
   - vc=14.3
+  - vc14_runtime=14.34.31931
   - vs2015_runtime=14.34.31931
   - wcwidth=0.2.6
+  - webcolors=24.6.0
   - webencodings=0.5.1
   - websocket-client=1.5.1
   - wheel=0.40.0
@@ -286,6 +300,7 @@ dependencies:
     - cloudpickle==2.2.1
     - dask==2023.3.2
     - fsspec==2023.3.0
+    - hydrolib==0.1.0
     - imod==0.12.0
     - ipympl==0.9.3
     - isort==5.12.0
